--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,35 +1,21 @@
-<html xmlns:th="http://www.thymeleaf.org">
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Todo-list</title>
+    <title>Task lists</title>
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
 
-<form th:object="${task}" method="POST" action="/add-task">
+<form th:object="${list}" method="POST" action="/add-list">
     <table class="add_task">
         <tr>
-            <th colspan="2">Add new tasks</th>
+            <th colspan="2">Add new tasks list</th>
         </tr>
         <tr>
             <td><label>Name:</label></td>
             <td><label>
                 <input type="text" th:field="*{name}"/>
-            </label></td>
-        </tr>
-        <tr>
-            <td><label>Description:</label></td>
-            <td><label>
-                <input type="text" th:field="*{description}"/>
-            </label></td>
-        </tr>
-        <tr>
-            <td><label>Priority:</label></td>
-            <td><label>
-                <input type="number" th:field="*{priority}"/>
             </label></td>
         </tr>
         <tr>
@@ -40,37 +26,26 @@
     </table>
 </form>
 
+
 <table class="todo_list">
     <tr>
         <th>Name</th>
-        <th>Description</th>
-        <th>Priority</th>
-        <th>isDone</th>
+        <th>Go</th>
         <th>Delete</th>
         <th></th>
     </tr>
-    <th:block th:each="task : ${tasks}">
+    <th:block th:each="list : ${lists}">
         <tr>
-            <td th:text="${task.getName()}"/>
-            <td th:text="${task.getDescription()}"/>
-            <td th:text="${task.getPriority()}"/>
+            <td th:text="${list.getName()}"></td>
             <td>
-                <form method="POST" action="/set-is-done">
-                    <div th:if="${task.isDone()}">
-                        <input type="hidden" th:name="taskId" th:value="${task.getId()}"/>
-                        <input type="hidden" th:name="isDone" th:value="${false}"/>
-                        <input type="submit" value="Set as not done">
-                    </div>
-                    <div th:unless="${task.isDone()}">
-                        <input type="hidden" th:name="taskId" th:value="${task.getId()}"/>
-                        <input type="hidden" th:name="isDone" th:value="${true}"/>
-                        <input type="submit" value="Set as done">
-                    </div>
+                <form method="GET" action="/get-list">
+                    <input type="hidden" th:name="listId" th:value="${list.getId()}"/>
+                    <input type="submit" value="go to list">
                 </form>
             </td>
             <td>
-                <form method="POST" action="/delete-task">
-                    <input type="hidden" th:name="taskId" th:value="${task.getId()}"/>
+                <form method="POST" action="/delete-list">
+                    <input type="hidden" th:name="listId" th:value="${list.getId()}"/>
                     <input type="submit" value="delete">
                 </form>
             </td>
